Responsive columns, general alignfull fixes

--- a/sass/gutenberg/blocks/_core-columns.scss
+++ b/sass/gutenberg/blocks/_core-columns.scss
@@ -7,10 +7,33 @@
   }
 
   // Loops to enumerate the classes for columns.
-  @for $i from 2 through 9 {
+  @for $i from 1 through 9 {
     &.columns-#{$i}.alignfull {
       padding-left: var(--padding-container-horizontal);
       padding-right: var(--padding-container-horizontal);
+      width: calc(100% - calc(var(--padding-container-horizontal) * 2));
+    }
+
+    &.columns-#{$i} {
+      @media (max-width: 1000px) {
+        display: grid;
+        grid-gap: 1em;
+        grid-template-columns: repeat(3, 1fr);
+        width: calc(100% - calc(var(--padding-container-horizontal) * 2));
+
+        .wp-block-column {
+          margin: 0;
+          width: 100%;
+        }
+      }
+
+      @media (max-width: 670px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @media (max-width: $container-mobile) {
+        grid-template-columns: repeat(1, 1fr);
+      }
     }
   }
 }
